run label encoding with undersampling

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -388,8 +388,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preprocessing: Label Encoding + Undersampling k= 1 metric: euclidean\n",
+      " acc = 0.6729136320034107\n",
+      " f2-score = 0.48936640668971626\n",
+      "preprocessing: Label Encoding + Undersampling k= 1 metric: cosine\n",
+      " acc = 0.6658258428962234\n",
+      " f2-score = 0.4914007356596083\n",
+      "preprocessing: Label Encoding + Undersampling k= 1 metric: manhattan\n",
+      " acc = 0.6762354780260774\n",
+      " f2-score = 0.4929946577965931\n",
+      "preprocessing: Label Encoding + Undersampling k= 1 metric: jaccard\n",
+      " acc = 0.8720289906561978\n",
+      " f2-score = 0.000520706772659423\n",
+      "preprocessing: Label Encoding + Undersampling k= 2 metric: euclidean\n",
+      " acc = 0.7795324546132802\n",
+      " f2-score = 0.4364077669902912\n",
+      "preprocessing: Label Encoding + Undersampling k= 2 metric: cosine\n",
+      " acc = 0.7737769566916546\n",
+      " f2-score = 0.4364812232533538\n",
+      "preprocessing: Label Encoding + Undersampling k= 2 metric: manhattan\n",
+      " acc = 0.7817351760400754\n",
+      " f2-score = 0.43892944038929443\n",
+      "preprocessing: Label Encoding + Undersampling k= 2 metric: jaccard\n",
+      " acc = 0.8720289906561978\n",
+      " f2-score = 0.000520706772659423\n",
+      "preprocessing: Label Encoding + Undersampling k= 3 metric: euclidean\n",
+      " acc = 0.695047429566206\n",
+      " f2-score = 0.5321244365024571\n",
+      "preprocessing: Label Encoding + Undersampling k= 3 metric: cosine\n",
+      " acc = 0.6847799054961452\n",
+      " f2-score = 0.5311674273360557\n",
+      "preprocessing: Label Encoding + Undersampling k= 3 metric: manhattan\n",
+      " acc = 0.6979607062919672\n",
+      " f2-score = 0.5385381519573967\n",
+      "preprocessing: Label Encoding + Undersampling k= 3 metric: jaccard\n",
+      " acc = 0.8719934628912495\n",
+      " f2-score = 0.0005206706237634072\n",
+      "preprocessing: Label Encoding + Undersampling k= 4 metric: euclidean\n",
+      " acc = 0.7597612534195474\n",
+      " f2-score = 0.5059841482524471\n",
+      "preprocessing: Label Encoding + Undersampling k= 4 metric: cosine\n",
+      " acc = 0.7514655203041176\n",
+      " f2-score = 0.5082829639579135\n",
+      "preprocessing: Label Encoding + Undersampling k= 4 metric: manhattan\n",
+      " acc = 0.7603652254236686\n",
+      " f2-score = 0.51026426222071\n",
+      "preprocessing: Label Encoding + Undersampling k= 4 metric: jaccard\n",
+      " acc = 0.6606387892137706\n",
+      " f2-score = 0.37763594268193484\n",
+      "preprocessing: Label Encoding + Undersampling k= 5 metric: euclidean\n",
+      " acc = 0.70314775997442\n",
+      " f2-score = 0.5517921803165303\n",
+      "preprocessing: Label Encoding + Undersampling k= 5 metric: cosine\n",
+      " acc = 0.6925604860198245\n",
+      " f2-score = 0.551994872616568\n",
+      "preprocessing: Label Encoding + Undersampling k= 5 metric: manhattan\n",
+      " acc = 0.7047998010445163\n",
+      " f2-score = 0.556640426354224\n",
+      "preprocessing: Label Encoding + Undersampling k= 5 metric: jaccard\n",
+      " acc = 0.5655309624471524\n",
+      " f2-score = 0.3947633065769505\n",
+      "preprocessing: Label Encoding + Undersampling k= 6 metric: euclidean\n",
+      " acc = 0.7496003126443316\n",
+      " f2-score = 0.5379405879636755\n",
+      "preprocessing: Label Encoding + Undersampling k= 6 metric: cosine\n",
+      " acc = 0.7408427185845738\n",
+      " f2-score = 0.5378909469483365\n",
+      "preprocessing: Label Encoding + Undersampling k= 6 metric: manhattan\n",
+      " acc = 0.7489075212278395\n",
+      " f2-score = 0.5386000351308624\n",
+      "preprocessing: Label Encoding + Undersampling k= 6 metric: jaccard\n",
+      " acc = 0.5680711976409564\n",
+      " f2-score = 0.3916238060249817\n",
+      "preprocessing: Label Encoding + Undersampling k= 7 metric: euclidean\n",
+      " acc = 0.7065406615269834\n",
+      " f2-score = 0.5631212016504401\n",
+      "preprocessing: Label Encoding + Undersampling k= 7 metric: cosine\n",
+      " acc = 0.6959178598074395\n",
+      " f2-score = 0.561807877926187\n",
+      "preprocessing: Label Encoding + Undersampling k= 7 metric: manhattan\n",
+      " acc = 0.7093473549578996\n",
+      " f2-score = 0.5686374274956751\n",
+      "preprocessing: Label Encoding + Undersampling k= 7 metric: jaccard\n",
+      " acc = 0.2542899776175081\n",
+      " f2-score = 0.44640549899219595\n",
+      "preprocessing: Label Encoding + Undersampling k= 8 metric: euclidean\n",
+      " acc = 0.74155327388354\n",
+      " f2-score = 0.5531497759393312\n",
+      "preprocessing: Label Encoding + Undersampling k= 8 metric: cosine\n",
+      " acc = 0.7343766653639819\n",
+      " f2-score = 0.5536147914625315\n",
+      "preprocessing: Label Encoding + Undersampling k= 8 metric: manhattan\n",
+      " acc = 0.7435783564855935\n",
+      " f2-score = 0.5581184789169613\n",
+      "preprocessing: Label Encoding + Undersampling k= 8 metric: jaccard\n",
+      " acc = 0.5645894766760223\n",
+      " f2-score = 0.39599532727339093\n",
+      "preprocessing: Label Encoding + Undersampling k= 9 metric: euclidean\n",
+      " acc = 0.7089032578960458\n",
+      " f2-score = 0.57258260940164\n",
+      "preprocessing: Label Encoding + Undersampling k= 9 metric: cosine\n",
+      " acc = 0.6992574697125804\n",
+      " f2-score = 0.5714514546583104\n",
+      "preprocessing: Label Encoding + Undersampling k= 9 metric: manhattan\n",
+      " acc = 0.7114079653249014\n",
+      " f2-score = 0.5754795663052543\n",
+      "preprocessing: Label Encoding + Undersampling k= 9 metric: jaccard\n",
+      " acc = 0.2559953103350268\n",
+      " f2-score = 0.4466411344581306\n",
+      "preprocessing: Label Encoding + Undersampling k= 10 metric: euclidean\n",
+      " acc = 0.7375741642093296\n",
+      " f2-score = 0.5621270247229327\n",
+      "preprocessing: Label Encoding + Undersampling k= 10 metric: cosine\n",
+      " acc = 0.7305041389846165\n",
+      " f2-score = 0.5660635388175889\n",
+      "preprocessing: Label Encoding + Undersampling k= 10 metric: manhattan\n",
+      " acc = 0.7407183714072547\n",
+      " f2-score = 0.5693771737043123\n",
+      "preprocessing: Label Encoding + Undersampling k= 10 metric: jaccard\n",
+      " acc = 0.34177709880271434\n",
+      " f2-score = 0.4496385272607778\n",
+      "preprocessing: Label Encoding + Undersampling k= 11 metric: euclidean\n",
+      " acc = 0.7096138131950119\n",
+      " f2-score = 0.5744559922052616\n",
+      "preprocessing: Label Encoding + Undersampling k= 11 metric: cosine\n",
+      " acc = 0.6992041780651579\n",
+      " f2-score = 0.5751169018024859\n",
+      "preprocessing: Label Encoding + Undersampling k= 11 metric: manhattan\n",
+      " acc = 0.712402742743454\n",
+      " f2-score = 0.5798117771408826\n",
+      "preprocessing: Label Encoding + Undersampling k= 11 metric: jaccard\n",
+      " acc = 0.2549827690340001\n",
+      " f2-score = 0.4466305570278062\n",
+      "preprocessing: Label Encoding + Undersampling k= 12 metric: euclidean\n",
+      " acc = 0.7352470956052155\n",
+      " f2-score = 0.5694247572302029\n",
+      "preprocessing: Label Encoding + Undersampling k= 12 metric: cosine\n",
+      " acc = 0.7262940988382421\n",
+      " f2-score = 0.5712498696966538\n",
+      "preprocessing: Label Encoding + Undersampling k= 12 metric: manhattan\n",
+      " acc = 0.7371478310299499\n",
+      " f2-score = 0.5743915343915343\n",
+      "preprocessing: Label Encoding + Undersampling k= 12 metric: jaccard\n",
+      " acc = 0.3319891995594557\n",
+      " f2-score = 0.38636753113218325\n",
+      "preprocessing: Label Encoding + Undersampling k= 13 metric: euclidean\n",
+      " acc = 0.7113191459125306\n",
+      " f2-score = 0.5797174980720055\n",
+      "preprocessing: Label Encoding + Undersampling k= 13 metric: cosine\n",
+      " acc = 0.7002167193661847\n",
+      " f2-score = 0.5785404638711868\n",
+      "preprocessing: Label Encoding + Undersampling k= 13 metric: manhattan\n",
+      " acc = 0.7133619923970583\n",
+      " f2-score = 0.5847359551702435\n",
+      "preprocessing: Label Encoding + Undersampling k= 13 metric: jaccard\n",
+      " acc = 0.25587096315770774\n",
+      " f2-score = 0.4467069431687344\n",
+      "preprocessing: Label Encoding + Undersampling k= 14 metric: euclidean\n",
+      " acc = 0.7330266102959463\n",
+      " f2-score = 0.5751524069791886\n",
+      "preprocessing: Label Encoding + Undersampling k= 14 metric: cosine\n",
+      " acc = 0.7237538636444382\n",
+      " f2-score = 0.577066423720391\n",
+      "preprocessing: Label Encoding + Undersampling k= 14 metric: manhattan\n",
+      " acc = 0.7353359150175862\n",
+      " f2-score = 0.5809355544337876\n",
+      "preprocessing: Label Encoding + Undersampling k= 14 metric: jaccard\n",
+      " acc = 0.25711443493089847\n",
+      " f2-score = 0.4465268693253202\n",
+      "preprocessing: Label Encoding + Undersampling k= 15 metric: euclidean\n",
+      " acc = 0.7118698262692295\n",
+      " f2-score = 0.5808619044719161\n",
+      "preprocessing: Label Encoding + Undersampling k= 15 metric: cosine\n",
+      " acc = 0.7016911216115395\n",
+      " f2-score = 0.5828006392329204\n",
+      "preprocessing: Label Encoding + Undersampling k= 15 metric: manhattan\n",
+      " acc = 0.7127402565104629\n",
+      " f2-score = 0.5862621103409137\n",
+      "preprocessing: Label Encoding + Undersampling k= 15 metric: jaccard\n",
+      " acc = 0.2568479766937862\n",
+      " f2-score = 0.4471844660194176\n"
+     ]
+    }
+   ],
    "source": [
     "preprocessing = \"Label Encoding + Undersampling\"\n",
     "\n",
