run one hot encoding without sampling

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -606,8 +606,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preprocessing: One Hot Encoding (1) k= 1 metric: euclidean\n",
+      " acc = 0.8200518705368245\n",
+      " f2-score = 0.3002190975400061\n",
+      "preprocessing: One Hot Encoding (1) k= 1 metric: cosine\n",
+      " acc = 0.8217039116069208\n",
+      " f2-score = 0.2938797143494756\n",
+      "preprocessing: One Hot Encoding (1) k= 1 metric: manhattan\n",
+      " acc = 0.8205847870110491\n",
+      " f2-score = 0.30083534537784806\n",
+      "preprocessing: One Hot Encoding (1) k= 1 metric: jaccard\n",
+      " acc = 0.8191459125306427\n",
+      " f2-score = 0.30210811708072816\n",
+      "preprocessing: One Hot Encoding (1) k= 2 metric: euclidean\n",
+      " acc = 0.8653852986108644\n",
+      " f2-score = 0.13673330525224378\n",
+      "preprocessing: One Hot Encoding (1) k= 2 metric: cosine\n",
+      " acc = 0.8655096457881835\n",
+      " f2-score = 0.13139089196387968\n",
+      "preprocessing: One Hot Encoding (1) k= 2 metric: manhattan\n",
+      " acc = 0.8649944931964331\n",
+      " f2-score = 0.13724792024083127\n",
+      "preprocessing: One Hot Encoding (1) k= 2 metric: jaccard\n",
+      " acc = 0.8639819518954063\n",
+      " f2-score = 0.13836863859467835\n",
+      "preprocessing: One Hot Encoding (1) k= 3 metric: euclidean\n",
+      " acc = 0.8506235122748428\n",
+      " f2-score = 0.26408345752608053\n",
+      "preprocessing: One Hot Encoding (1) k= 3 metric: cosine\n",
+      " acc = 0.8516182896933954\n",
+      " f2-score = 0.2505557892206934\n",
+      "preprocessing: One Hot Encoding (1) k= 3 metric: manhattan\n",
+      " acc = 0.8509610260418518\n",
+      " f2-score = 0.2655658549670651\n",
+      "preprocessing: One Hot Encoding (1) k= 3 metric: jaccard\n",
+      " acc = 0.8496997903861868\n",
+      " f2-score = 0.26420708122582565\n",
+      "preprocessing: One Hot Encoding (1) k= 4 metric: euclidean\n",
+      " acc = 0.8684584502788929\n",
+      " f2-score = 0.15613887631732076\n",
+      "preprocessing: One Hot Encoding (1) k= 4 metric: cosine\n",
+      " acc = 0.8680498809819874\n",
+      " f2-score = 0.14154776221276041\n",
+      "preprocessing: One Hot Encoding (1) k= 4 metric: manhattan\n",
+      " acc = 0.8679077699221942\n",
+      " f2-score = 0.15021528699537054\n",
+      "preprocessing: One Hot Encoding (1) k= 4 metric: jaccard\n",
+      " acc = 0.866149145557253\n",
+      " f2-score = 0.1550325198016614\n",
+      "preprocessing: One Hot Encoding (1) k= 5 metric: euclidean\n",
+      " acc = 0.8612285501119125\n",
+      " f2-score = 0.23895193283513239\n",
+      "preprocessing: One Hot Encoding (1) k= 5 metric: cosine\n",
+      " acc = 0.8612996056418091\n",
+      " f2-score = 0.22244942218917496\n",
+      "preprocessing: One Hot Encoding (1) k= 5 metric: manhattan\n",
+      " acc = 0.8605712864603687\n",
+      " f2-score = 0.23227157907707474\n",
+      "preprocessing: One Hot Encoding (1) k= 5 metric: jaccard\n",
+      " acc = 0.85886595374285\n",
+      " f2-score = 0.2421277896667686\n",
+      "preprocessing: One Hot Encoding (1) k= 6 metric: euclidean\n",
+      " acc = 0.8704835328809465\n",
+      " f2-score = 0.15549928580703803\n",
+      "preprocessing: One Hot Encoding (1) k= 6 metric: cosine\n",
+      " acc = 0.8706078800582655\n",
+      " f2-score = 0.14452092780478254\n",
+      "preprocessing: One Hot Encoding (1) k= 6 metric: manhattan\n",
+      " acc = 0.8704480051159982\n",
+      " f2-score = 0.1541184877224893\n",
+      "preprocessing: One Hot Encoding (1) k= 6 metric: jaccard\n",
+      " acc = 0.8680854087469357\n",
+      " f2-score = 0.15239266185653735\n",
+      "preprocessing: One Hot Encoding (1) k= 7 metric: euclidean\n",
+      " acc = 0.8670373396809606\n",
+      " f2-score = 0.22127499529868988\n",
+      "preprocessing: One Hot Encoding (1) k= 7 metric: cosine\n",
+      " acc = 0.8674636728603403\n",
+      " f2-score = 0.2066233110241192\n",
+      "preprocessing: One Hot Encoding (1) k= 7 metric: manhattan\n",
+      " acc = 0.8667531175613742\n",
+      " f2-score = 0.21987838515546637\n",
+      "preprocessing: One Hot Encoding (1) k= 7 metric: jaccard\n",
+      " acc = 0.8642484101325185\n",
+      " f2-score = 0.22359938961726514\n",
+      "preprocessing: One Hot Encoding (1) k= 8 metric: euclidean\n",
+      " acc = 0.8718158240665079\n",
+      " f2-score = 0.1508332518018459\n",
+      "preprocessing: One Hot Encoding (1) k= 8 metric: cosine\n",
+      " acc = 0.8714427825345508\n",
+      " f2-score = 0.13779656573600735\n",
+      "preprocessing: One Hot Encoding (1) k= 8 metric: manhattan\n",
+      " acc = 0.8720645184211461\n",
+      " f2-score = 0.15304625615281806\n",
+      "preprocessing: One Hot Encoding (1) k= 8 metric: jaccard\n",
+      " acc = 0.869844033111877\n",
+      " f2-score = 0.15577384425857485\n",
+      "preprocessing: One Hot Encoding (1) k= 9 metric: euclidean\n",
+      " acc = 0.8695953387572388\n",
+      " f2-score = 0.2033333333333333\n",
+      "preprocessing: One Hot Encoding (1) k= 9 metric: cosine\n",
+      " acc = 0.869737449817032\n",
+      " f2-score = 0.18796752125823157\n",
+      "preprocessing: One Hot Encoding (1) k= 9 metric: manhattan\n",
+      " acc = 0.8703769495861016\n",
+      " f2-score = 0.2076986544808327\n",
+      "preprocessing: One Hot Encoding (1) k= 9 metric: jaccard\n",
+      " acc = 0.867072867445909\n",
+      " f2-score = 0.21239773442416615\n",
+      "preprocessing: One Hot Encoding (1) k= 10 metric: euclidean\n",
+      " acc = 0.8725974348953708\n",
+      " f2-score = 0.15197022624138942\n",
+      "preprocessing: One Hot Encoding (1) k= 10 metric: cosine\n",
+      " acc = 0.8724197960706292\n",
+      " f2-score = 0.13664881910455606\n",
+      "preprocessing: One Hot Encoding (1) k= 10 metric: manhattan\n",
+      " acc = 0.8727928376025864\n",
+      " f2-score = 0.15079728140112403\n",
+      "preprocessing: One Hot Encoding (1) k= 10 metric: jaccard\n",
+      " acc = 0.8710164493551711\n",
+      " f2-score = 0.15565087411451226\n",
+      "preprocessing: One Hot Encoding (1) k= 11 metric: euclidean\n",
+      " acc = 0.8705723522933172\n",
+      " f2-score = 0.19430341348149568\n",
+      "preprocessing: One Hot Encoding (1) k= 11 metric: cosine\n",
+      " acc = 0.8707499911180587\n",
+      " f2-score = 0.1789446606000193\n",
+      "preprocessing: One Hot Encoding (1) k= 11 metric: manhattan\n",
+      " acc = 0.8710164493551711\n",
+      " f2-score = 0.1950479233226837\n",
+      "preprocessing: One Hot Encoding (1) k= 11 metric: jaccard\n",
+      " acc = 0.8683873947489963\n",
+      " f2-score = 0.201730476673428\n",
+      "preprocessing: One Hot Encoding (1) k= 12 metric: euclidean\n",
+      " acc = 0.8731481152520695\n",
+      " f2-score = 0.1510494997711371\n",
+      "preprocessing: One Hot Encoding (1) k= 12 metric: cosine\n",
+      " acc = 0.8721888655984652\n",
+      " f2-score = 0.1275543836519446\n",
+      "preprocessing: One Hot Encoding (1) k= 12 metric: manhattan\n",
+      " acc = 0.8727750737201123\n",
+      " f2-score = 0.14648597335428326\n",
+      "preprocessing: One Hot Encoding (1) k= 12 metric: jaccard\n",
+      " acc = 0.870661171705688\n",
+      " f2-score = 0.14867769671704012\n",
+      "preprocessing: One Hot Encoding (1) k= 13 metric: euclidean\n",
+      " acc = 0.8720822823036203\n",
+      " f2-score = 0.18906079476150736\n",
+      "preprocessing: One Hot Encoding (1) k= 13 metric: cosine\n",
+      " acc = 0.8713717270046542\n",
+      " f2-score = 0.16244082744309707\n",
+      "preprocessing: One Hot Encoding (1) k= 13 metric: manhattan\n",
+      " acc = 0.8719046434788787\n",
+      " f2-score = 0.1858813700918964\n",
+      "preprocessing: One Hot Encoding (1) k= 13 metric: jaccard\n",
+      " acc = 0.8697552136995061\n",
+      " f2-score = 0.1901887515569608\n",
+      "preprocessing: One Hot Encoding (1) k= 14 metric: euclidean\n",
+      " acc = 0.8737520872561907\n",
+      " f2-score = 0.14890898368390013\n",
+      "preprocessing: One Hot Encoding (1) k= 14 metric: cosine\n",
+      " acc = 0.8730770597221729\n",
+      " f2-score = 0.1238425925925926\n",
+      "preprocessing: One Hot Encoding (1) k= 14 metric: manhattan\n",
+      " acc = 0.8734678651366042\n",
+      " f2-score = 0.1451295506723516\n",
+      "preprocessing: One Hot Encoding (1) k= 14 metric: jaccard\n",
+      " acc = 0.8712829075922833\n",
+      " f2-score = 0.14423862262733184\n",
+      "preprocessing: One Hot Encoding (1) k= 15 metric: euclidean\n",
+      " acc = 0.8730770597221729\n",
+      " f2-score = 0.1798514691637068\n",
+      "preprocessing: One Hot Encoding (1) k= 15 metric: cosine\n",
+      " acc = 0.873325754076811\n",
+      " f2-score = 0.15997654111820672\n",
+      "preprocessing: One Hot Encoding (1) k= 15 metric: manhattan\n",
+      " acc = 0.8730948236046471\n",
+      " f2-score = 0.18135467423924617\n",
+      "preprocessing: One Hot Encoding (1) k= 15 metric: jaccard\n",
+      " acc = 0.8700216719366185\n",
+      " f2-score = 0.18347006794000773\n"
+     ]
+    }
+   ],
    "source": [
     "preprocessing = \"One Hot Encoding (1)\"\n",
     "\n",
