add test results for embedding model

--- a/jupyter_notebooks/neural_network_label_embedding.ipynb
+++ b/jupyter_notebooks/neural_network_label_embedding.ipynb
@@ -3132,6 +3132,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Train model with oversampling"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "outputs": [
@@ -4053,6 +4065,112 @@
    ],
    "source": [
     "plot_multiple_f_scores([f_scores, f_scores_validation], labels=[\"F2-score train\", \"F2-score validation\"], title=\"F2-scores for label embedding with oversampling\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Evaluate model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 12800] loss: 0.664\n",
+      "[1, 25600] loss: 0.610\n",
+      "[1, 38400] loss: 0.587\n",
+      "[1, 51200] loss: 0.573\n",
+      "[1, 64000] loss: 0.562\n",
+      "[1, 76800] loss: 0.555\n",
+      "[1, 89600] loss: 0.548\n",
+      "[1, 102400] loss: 0.542\n",
+      "[1, 115200] loss: 0.539\n",
+      "[1, 128000] loss: 0.535\n",
+      "[1, 140800] loss: 0.531\n",
+      "[1, 153600] loss: 0.527\n",
+      "[1, 166400] loss: 0.524\n",
+      "Epoch 0 loss: 0.5231595833870497\n",
+      "Epoch 0 validation loss: 0.4928701652721925\n",
+      "Train accuracy epoch 0: 64.60901694674388 %\n",
+      "Validation accuracy epoch 0: 64.25970334843237 %\n",
+      "Train F2-score : 0.8669395556462409\n",
+      "Validation F2-score : 0.8660991293034426\n",
+      "Train Precision : 0.5858430238693202\n",
+      "Validation Precision : 0.5847339527027027\n",
+      "Train Recall : 0.9851069366896943\n",
+      "Validation Recall : 0.9845349829351536\n",
+      "[2, 12800] loss: 0.498\n",
+      "[2, 25600] loss: 0.495\n",
+      "[2, 38400] loss: 0.492\n",
+      "[2, 51200] loss: 0.490\n",
+      "[2, 64000] loss: 0.491\n",
+      "[2, 76800] loss: 0.490\n",
+      "[2, 89600] loss: 0.489\n",
+      "[2, 102400] loss: 0.488\n",
+      "[2, 115200] loss: 0.487\n",
+      "[2, 128000] loss: 0.487\n",
+      "[2, 140800] loss: 0.486\n",
+      "[2, 153600] loss: 0.486\n",
+      "[2, 166400] loss: 0.486\n",
+      "Epoch 1 loss: 0.48530479899861595\n",
+      "Epoch 1 validation loss: 0.49277779710563746\n",
+      "Train accuracy epoch 1: 63.71786217595717 %\n",
+      "Validation accuracy epoch 1: 63.61843858246736 %\n",
+      "Train F2-score : 0.8671056340363443\n",
+      "Validation F2-score : 0.8655531658316447\n",
+      "Train Precision : 0.5807859958909434\n",
+      "Validation Precision : 0.5804535412063863\n",
+      "Train Recall : 0.9889960522894358\n",
+      "Validation Recall : 0.9867134353741497\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = preprocessor.get_preprocessed_dataset_for_neural_network()\n",
+    "\n",
+    "train_dataset = CustomBrfssDataset(data_train, target_train)\n",
+    "test_dataset = CustomBrfssDataset(data_test, target_test)\n",
+    "\n",
+    "# Custom weighted sampling required because otherwise the f2 score can be zero when all samples are from the same class, random sampling is not suitable\n",
+    "class_count_train = [target_train[\"No\"].sum(),target_train[\"Yes\"].sum()]\n",
+    "class_weights_train = 1./torch.tensor(class_count_train, dtype=torch.float)\n",
+    "class_weights_train_all = class_weights_train[np.where(target_train.to_numpy()==1)[1]]\n",
+    "\n",
+    "class_count_validation = [target_test[\"No\"].sum(),target_test[\"Yes\"].sum()]\n",
+    "class_weights_test = 1./torch.tensor(class_count_validation, dtype=torch.float)\n",
+    "class_weights_test_all = class_weights_validation[np.where(target_test.to_numpy()==1)[1]]\n",
+    "\n",
+    "weighted_sampler_train = data_utils.WeightedRandomSampler(weights=class_weights_train_all, num_samples=target_train.shape[0], replacement=True)\n",
+    "weighted_sampler_test = data_utils.WeightedRandomSampler(weights=class_weights_test_all, num_samples=target_test.shape[0], replacement=True)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=False, sampler=weighted_sampler_train)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False, sampler=weighted_sampler_test)\n",
+    "\n",
+    "net = Net()\n",
+    "net.to(device)\n",
+    "\n",
+    "criterion_cross_entropy = nn.BCELoss()\n",
+    "optimizer_adam = optim.Adam(net.parameters(),lr=0.002)\n",
+    "\n",
+    "loss_values, loss_values_validation, accuracy_values, accuracy_values_validation, f_scores, f_scores_validation = train_network(model=net, criterion=criterion_cross_entropy, optimizer=optimizer_adam, data_train_loader=train_loader, data_validation_loader=test_loader, n_epochs=2)"
    ],
    "metadata": {
     "collapsed": false,
