--- a/jupyter_notebooks/neural_network_label_embedding.ipynb
+++ b/jupyter_notebooks/neural_network_label_embedding.ipynb
@@ -4170,7 +4170,7 @@
     "criterion_cross_entropy = nn.BCELoss()\n",
     "optimizer_adam = optim.Adam(net.parameters(),lr=0.002)\n",
     "\n",
-    "loss_values, loss_values_validation, accuracy_values, accuracy_values_validation, f_scores, f_scores_validation = train_network(model=net, criterion=criterion_cross_entropy, optimizer=optimizer_adam, data_train_loader=train_loader, data_validation_loader=test_loader, n_epochs=2)"
+    "loss_values, loss_values_test, accuracy_values, accuracy_values_test, f_scores, f_scores_test = train_network(model=net, criterion=criterion_cross_entropy, optimizer=optimizer_adam, data_train_loader=train_loader, data_validation_loader=test_loader, n_epochs=2)"
    ],
    "metadata": {
     "collapsed": false,
