add one hot encoding test result

--- a/jupyter_notebooks/neural_network_one_hot_encoding.ipynb
+++ b/jupyter_notebooks/neural_network_one_hot_encoding.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "#imports\n",
@@ -28,6 +28,7 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import torch.utils.data as data_utils\n",
+    "from torch.utils.data import WeightedRandomSampler\n",
     "\n",
     "import numpy as np"
    ],
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class CustomBrfssDataset(data_utils.Dataset):\n",
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class Net(nn.Module):\n",
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def get_accuracy(model: Net, data_loader):\n",
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def make_weights_for_balanced_classes(data, nclasses):\n",
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "def train_network(model: Net, criterion, optimizer, data_train_loader, data_validation_loader, n_epochs=5):\n",
@@ -1538,8 +1539,6 @@
     }
    ],
    "source": [
-    "from torch.utils.data import WeightedRandomSampler\n",
-    "\n",
     "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split(target_one_hot_encoded=True, include_test_data=False)\n",
     "\n",
     "batch_size = 128\n",
@@ -7653,6 +7652,107 @@
    ],
    "source": [
     "plot_multiple_f_scores([f_scores, f_scores_validation], labels=[\"F2-score train\", \"F2-score validation\"], title=\"F2-scores for one hot encoding with oversampling (all columns)\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input size: 73\n",
+      "Output size: 2\n",
+      "[1, 12800] loss: 0.561\n",
+      "[1, 25600] loss: 0.529\n",
+      "[1, 38400] loss: 0.515\n",
+      "[1, 51200] loss: 0.506\n",
+      "[1, 64000] loss: 0.501\n",
+      "[1, 76800] loss: 0.498\n",
+      "[1, 89600] loss: 0.494\n",
+      "[1, 102400] loss: 0.492\n",
+      "[1, 115200] loss: 0.490\n",
+      "[1, 128000] loss: 0.489\n",
+      "[1, 140800] loss: 0.488\n",
+      "[1, 153600] loss: 0.487\n",
+      "[1, 166400] loss: 0.485\n",
+      "Epoch 0 loss: 0.4846406760992426\n",
+      "Epoch 0 validation loss: 0.49192919304425065\n",
+      "Train accuracy: 76.69082554683152 %\n",
+      "Validation accuracy: 76.09023891997512 %\n",
+      "Train F2-score : 0.8326468675482334\n",
+      "Validation F2-score : 0.8242131481621253\n",
+      "Train Precision : 0.7249545531306187\n",
+      "Validation Precision : 0.7229394240317776\n",
+      "Train Recall : 0.8647620627547635\n",
+      "Validation Recall : 0.8541259288228392\n",
+      "[2, 12800] loss: 0.466\n",
+      "[2, 25600] loss: 0.468\n",
+      "[2, 38400] loss: 0.467\n",
+      "[2, 51200] loss: 0.468\n",
+      "[2, 64000] loss: 0.469\n",
+      "[2, 76800] loss: 0.468\n",
+      "[2, 89600] loss: 0.467\n",
+      "[2, 102400] loss: 0.466\n",
+      "[2, 115200] loss: 0.466\n",
+      "[2, 128000] loss: 0.466\n",
+      "[2, 140800] loss: 0.466\n",
+      "[2, 153600] loss: 0.466\n",
+      "[2, 166400] loss: 0.466\n",
+      "Epoch 1 loss: 0.4651529608350812\n",
+      "Epoch 1 validation loss: 0.4941108104180206\n",
+      "Train accuracy: 76.74115654717495 %\n",
+      "Validation accuracy: 76.1843858246736 %\n",
+      "Train F2-score : 0.8273343540154562\n",
+      "Validation F2-score : 0.8148450692623457\n",
+      "Train Precision : 0.7273648208142346\n",
+      "Validation Precision : 0.721830343569474\n",
+      "Train Recall : 0.8567732331466648\n",
+      "Validation Recall : 0.8419690037947299\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split(target_one_hot_encoded=True, include_test_data=True)\n",
+    "\n",
+    "batch_size = 128\n",
+    "output_size = target_train.shape[1]\n",
+    "input_size = data_train.shape[1]\n",
+    "print(f\"Input size: {input_size}\")\n",
+    "print(f\"Output size: {output_size}\")\n",
+    "\n",
+    "train_dataset = CustomBrfssDataset(data_train, target_train)\n",
+    "test_dataset = CustomBrfssDataset(data_test, target_test)\n",
+    "\n",
+    "# Custom weighted sampling required because otherwise the f2 score can be zero when all samples are from the same class, random sampling is not suitable\n",
+    "class_count_train = [target_train[\"No\"].sum(),target_train[\"Yes\"].sum()]\n",
+    "class_weights_train = 1./torch.tensor(class_count_train, dtype=torch.float)\n",
+    "class_weights_train_all = class_weights_train[np.where(target_train.to_numpy()==1)[1]]\n",
+    "\n",
+    "class_count_test = [target_test[\"No\"].sum(),target_test[\"Yes\"].sum()]\n",
+    "class_weights_test = 1./torch.tensor(class_count_test, dtype=torch.float)\n",
+    "class_weights_test_all = class_weights_test[np.where(target_test.to_numpy()==1)[1]]\n",
+    "\n",
+    "weighted_sampler_train = WeightedRandomSampler(weights=class_weights_train_all, num_samples=target_train.shape[0], replacement=True)\n",
+    "weighted_sampler_test = WeightedRandomSampler(weights=class_weights_test_all, num_samples=target_test.shape[0], replacement=True)\n",
+    "\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=False, sampler=weighted_sampler_train)\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=batch_size, shuffle=False, sampler=weighted_sampler_test)\n",
+    "\n",
+    "net = Net(input_size=input_size, output_size=output_size)\n",
+    "net.to(device)\n",
+    "\n",
+    "criterion_cross_entropy = nn.BCELoss()\n",
+    "optimizer_adam = optim.Adam(net.parameters(),lr=0.002)\n",
+    "loss_values, loss_values_test, accuracy_values, accuracy_values_test, f_scores, f_scores_test = train_network(model=net, criterion=criterion_cross_entropy, optimizer=optimizer_adam, data_train_loader=train_loader, data_validation_loader=test_loader, n_epochs=2)"
    ],
    "metadata": {
     "collapsed": false,
