--- a/jupyter_notebooks/xgboost.ipynb
+++ b/jupyter_notebooks/xgboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -12,6 +12,7 @@
    "outputs": [],
    "source": [
     "from preprocessing.preprocessing_label_encoding import  get_preprocessed_brfss_dataset_label_encoded_train_test_split, get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled, get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled\n",
+    "from preprocessing.preprocessing_one_hot_encoding import get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split\n",
     "\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import accuracy_score, fbeta_score, recall_score, precision_score"
@@ -466,8 +467,59 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Validate best model against one hot encoding"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best model with oversampling --> Accuracy: 0.7350516928979998, F-Score: 0.608108108108108, Precision: 0.3016656384947563, Recall: 0.8151132101680789\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split(include_test_data=True)\n",
+    "estimator = XGBClassifier(min_child_weight=10, eta=0.2, gamma=47, max_depth=6)\n",
+    "estimator.fit(data_train, target_train, sample_weight=sample_weights)\n",
+    "predictions = estimator.predict(data_validation)\n",
+    "accuracy, f_score, precision, recall = accuracy_score(target_validation, predictions), fbeta_score(target_validation, predictions, beta=2), precision_score(target_validation, predictions), recall_score(target_validation, predictions)\n",
+    "print(f\"Best model with oversampling --> Accuracy: {accuracy}, F-Score: {f_score}, Precision: {precision}, Recall: {recall}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Evaluate model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
